--- a/src/components/lessons/LessonVideoPlayer.css
+++ b/src/components/lessons/LessonVideoPlayer.css
@@ -1,17 +1,17 @@
-.resp-container {
+/* .resp-container {
   position: relative;
   overflow: hidden;
   padding-top: 56.25%;
   background-color: antiquewhite;
-  /* min-width: 200%;
-  min-height: 200%; */
-}
+ 
+} */
 
 .resp-iframe {
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
-  height: 100%;
-  border: 0;
+  /* height: auto; */
+  min-height: 100vh;
+  /* border: 0; */
 }
