--- a/src/components/lessons/LessonView.css
+++ b/src/components/lessons/LessonView.css
@@ -1,6 +1,6 @@
 .expanded {
   /* transition: margin-left .5s; */
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .LessonView {
