--- a/src/components/lessons/LessonViewNavbar.css
+++ b/src/components/lessons/LessonViewNavbar.css
@@ -2,6 +2,7 @@
   display: flex;
   /* flex-direction: row-reverse; */
   justify-content: space-between;
+  width: 100%;
 }
 
 .openBtn:hover {
